--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
       <div class="container">
         <div class="footer-content">
           <p>
-            &copy; <span id="year"></span> Hostel Poster Store. Crafted with ❤️
-            for students.
+            &copy; <span id="year"></span> Crafted with ❤️
+            for Hostellers.
           </p>
         </div>
       </div>
