updated insta handle, admin page route

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               
               <p>
                 <strong>Special Offers:</strong> Buy 6 posters, get 1 free &bull; Buy 10 posters, get 2 free.<br>
-                <span style="font-size: 0.95em;">Scroll down for contact information.</span>
+                <span style="font-size: 0.95em;">Reach @posterhub101 on instagram to order</span>
               </p>
             </div>
           </div>
