--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <!-- <br class="mobile-br"> -->
               
               <p>
-                <strong>Special Offers:</strong> Buy 6 posters, get 1 free &bull; Buy 10 posters, get 2 free.<br>
+                <strong>Limited Offers:</strong> Buy 6 posters, get 1 free &bull; Buy 10 posters, get 2 free.<br>
                 <span style="font-size: 0.95em;">Reach @posterhub101 on instagram to order</span>
               </p>
             </div>
